<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Webim demo chat</string>
    <string name="reply_thumbnail" translatable="false">reply thumbnail</string>
    <string name="first_screen_text1">Welcome to the Demo App for\nWebim Mobile SDK!</string>
    <string name="first_screen_text2">Tap the button below to start chatting.</string>
    <string name="first_screen_text3">Sign in as an agent to answer this chat at:</string>
    <string name="first_screen_text4">https://demo.webim.ru</string>
    <string name="first_screen_text5">Login: o@webim.ru</string>
    <string name="first_screen_text6">Password: password</string>
    <string name="first_screen_text7">Source code of this app can be found at:</string>
    <string name="first_screen_text8">https://github.com/webim/webim-android-sdk-demo</string>
    <string name="image_logo_content_description">Logo</string>
    <string name="button_text_start_chat">Start chat</string>
    <string name="button_text_settings">Settings</string>
    <string name="message">Message…</string>
    <string name="action_close_chat">Close chat</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="alert_close_chat">Close chat?</string>
    <string name="choose_department">Choose department</string>
    <string name="empty_chat_text">Enter the message to start chatting with the agent</string>
    <string name="content_desc_send_message">Send message</string>
    <string name="rate_operator_button">Send</string>
    <string name="rate_operator_title">Rate agent</string>
    <string name="rate_operator_rating_sent">Rating has been sent</string>
    <string name="rate_operator_rating_empty">No rating was given</string>
    <string name="file_chooser_title">Select file to upload</string>
    <string name="file_chooser_not_found">To download the file, please install the file manager</string>
    <string name="file_selection_failed">Could not select file</string>
    <string name="file_upload_failed_size">Failed to upload file: max file size exceeded</string>
    <string name="file_upload_failed_type">File upload failed: file type not allowed by server</string>
    <string name="file_upload_failed_unknown">Unable to load file: unknown error</string>
    <string name="file_upload_failed_unauthorized">Failed to upload file: visitor is not logged in</string>
    <string name="file_upload_failed_empty">Failed to upload file: empty file</string>
    <string name="file_upload_message_text">Sending file…</string>
    <string name="file_send">Sent a file:\n</string>
    <string name="error_user_banned_header">You are banned by the agent</string>
    <string name="error_user_banned_desc">You can not use chat, because they were banned by the agent</string>
    <string name="error_account_blocked_header">Webim account blocked</string>
    <string name="error_account_blocked_desc">
        You cannot use chat because the webim account of the organization you are trying to contact is blocked. Please try again later.
    </string>
    <string name="error_unknown_header">Unknown error</string>
    <string name="error_unknown_desc">
        You cannot use chat because an unknown error occurred.
        Our developers are already notified about this problem and will fix it soon. Details %s
    </string>
    <string name="validation_error">Error</string>
    <string name="push_contact_information">The agent has requested contact details.</string>
    <string name="push_operator_accepted">The agent %1$s has joined the dialogue.</string>
    <string name="push_operator_file">%1$s sent a file %2$s</string>
    <string name="push_operator_message">%1$s: %2$s</string>
    <string name="push_rate_operator">Rate operator</string>
    <string name="prefs_notifications_summary">Enable FCM push notifications for new messages from the agent</string>
    <string name="prefs_notifications_title">Notifications</string>
    <string name="prefs_file_logger_title">For testers</string>
    <string name="prefs_file_logger_summary">Write logs in file</string>
    <string name="prefs_account_title">Account name</string>
    <string name="prefs_account_summary">Webim account name or full server address (for example, \"demo\" или \"https://demo.webim.ru\")</string>
    <string name="prefs_location_summary">The location that will receive the appeal (for example, \"mobile\")</string>
    <string name="prefs_location_title">Location</string>
    <string name="prefs_privacy">Privacy</string>
    <string name="prefs_version">App version: %1$s\nSDK version: %2$s</string>

    <string name="typing">typing…</string>

    <string name="options">Options</string>
    <string name="save_image">Save image?</string>
    <string name="sending_file">"Sending file: "</string>
    <string name="def_image_name">image_%1$d.jpg</string>
    <string name="saved_file">File %1$s saved</string>
    <string name="saving_failed">Failed to upload file</string>

    <string name="rate_operator">Rate agent</string>
    <string name="close_chat">Close chat</string>

    <string name="no_operator">without agent</string>
    <string name="operator_typing">typing</string>
    <string name="operator_name">%1$s</string>

    <string name="copied_message">Message text copied</string>
    <string name="copy_failed">Could not copy message</string>
    <string name="quote_is_pending">Quote is loading</string>
    <string name="quote_is_not_found">Quote unavailable</string>
    <string name="message_edited">edited</string>
    <string name="message_deleted_toast">Message was deleted</string>

    <string name="empty_reply_text"> </string>
    <string name="reply_message_with_image">"Image "</string>
    <string name="default_text">Text example</string>
    <string name="default_time">10:12</string>
    <string name="channel_id">com.webimapp.android.demo.client.fcm</string>
    <string name="channel_name">Webim notification</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="download">Download file</string>
    <string name="edit">Edit</string>
    <string name="reply">Reply</string>
    <string name="failed_send_empty_message">Unable to send empty message</string>
    <string name="wait_sync_toast">Waiting for synchronization with server</string>
    <string name="operation_denied_toast">Operation denied</string>

    <string name="default_date">November 12</string>
    <string name="send_file">Send file</string>
    <string name="file_upload_failed_name">Failed to upload file: error in file name</string>
    <string name="visitor_sender_name">You</string>
    <string name="file_transfer_by_operator">"Transferring the file "</string>
    <string name="editing_title">Editing</string>

    <string name="survey_finish_message">Thanks for taking part in survey!</string>
    <string name="survey_rate_title">Rate operator</string>
    <string name="survey_send_answer">Send</string>
    <string name="survey_edit_text_hint">Type comment text</string>
    <string name="dialog_ok">ok</string>
    <string name="dialog_cancel">cancel</string>

    <string name="settings_account_field_hint">Enter the full server URL or account name,
        hosted on the server *.webim.ru
        \nFor example, for the server demo.webim.ru you need to type \"demo\"</string>
    <string name="file_upload_connection_timeout">File upload timeout exceeded</string>

    <string name="cannot_open_file">Cannot find an app for opening the file</string>
    <string name="prefs_testers_title" translatable="false">For testers</string>
    <string name="prefs_use_chat_view" translatable="false">Использовать ChatView</string>
</resources>
