<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDialog">

    <RelativeLayout
        android:id="@+id/relLayoutReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/alert_dialog_marginLeft"
        android:paddingLeft="@dimen/alert_dialog_marginLeft"
        android:paddingTop="@dimen/alert_dialog_marginLeft"
        android:paddingEnd="@dimen/alert_dialog_relative_marginEnd"
        android:paddingRight="@dimen/alert_dialog_relative_marginEnd"
        android:orientation="horizontal"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/imageReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/alert_dialog_image_margin"
            android:tint="@color/white"
            app:srcCompat="@drawable/arrow_forward"
            android:contentDescription="@string/reply" />

        <TextView
            android:id="@+id/textReply"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/alert_dialog_marginLeft"
            android:layout_marginStart="@dimen/alert_dialog_marginLeft"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@id/imageReply"
            android:layout_toRightOf="@id/imageReply"
            android:text="@string/reply"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayoutCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relLayoutReply"
        android:paddingStart="@dimen/alert_dialog_marginLeft"
        android:paddingLeft="@dimen/alert_dialog_marginLeft"
        android:paddingTop="@dimen/alert_dialog_marginLeft"
        android:paddingEnd="@dimen/alert_dialog_relative_marginEnd"
        android:paddingRight="@dimen/alert_dialog_relative_marginEnd"
        android:paddingBottom="@dimen/alert_dialog_marginLeft"
        android:orientation="horizontal"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/imageCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/alert_dialog_image_margin"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_copy"
            android:contentDescription="@string/copy" />

        <TextView
            android:id="@+id/texCopy"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/alert_dialog_marginLeft"
            android:layout_marginStart="@dimen/alert_dialog_marginLeft"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/imageCopy"
            android:layout_toRightOf="@id/imageCopy"
            android:text="@string/copy"
            android:textColor="@color/white"
            tools:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayoutEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relLayoutCopy"
        android:paddingStart="@dimen/alert_dialog_marginLeft"
        android:paddingLeft="@dimen/alert_dialog_marginLeft"
        android:paddingEnd="@dimen/alert_dialog_relative_marginEnd"
        android:paddingRight="@dimen/alert_dialog_relative_marginEnd"
        android:paddingBottom="@dimen/alert_dialog_relative_marginBottom"
        android:orientation="horizontal"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/imageEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/alert_dialog_image_margin"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_group"
            android:contentDescription="@string/edit" />

        <TextView
            android:id="@+id/textEdit"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/alert_dialog_marginLeft"
            android:layout_marginStart="@dimen/alert_dialog_marginLeft"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/imageEdit"
            android:layout_toRightOf="@id/imageEdit"
            android:text="@string/edit"
            android:textColor="@color/white"
            tools:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayoutDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relLayoutEdit"
        android:paddingStart="@dimen/alert_dialog_marginLeft"
        android:paddingLeft="@dimen/alert_dialog_marginLeft"
        android:paddingTop="@dimen/alert_dialog_relative_marginTop"
        android:paddingEnd="@dimen/alert_dialog_relative_marginEnd"
        android:paddingRight="@dimen/alert_dialog_relative_marginEnd"
        android:paddingBottom="16dp"
        android:orientation="horizontal"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/imageDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/alert_dialog_image_margin"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_trash"
            android:contentDescription="@string/delete" />

        <TextView
            android:id="@+id/textDelete"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/alert_dialog_marginLeft"
            android:layout_marginStart="@dimen/alert_dialog_marginLeft"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/imageDelete"
            android:layout_toRightOf="@id/imageDelete"
            android:text="@string/delete"
            android:textColor="@color/white"
            tools:visibility="visible" />
    </RelativeLayout>
</android.widget.RelativeLayout>